Rename to HelloGPUs4J and add no-Maven compile option
Major improvements for accessibility:

1. Renamed JconBackup.java → HelloGPUs4J.java
   - More welcoming name (Hello GPU for Java)
   - Clear indication it's a beginner tutorial
   - Updated all class references in code

2. Added Option 2: Compile without Maven!
   - Use javac directly with module-path
   - No build tools required - just javac and java
   - Perfect for quick experiments or environments without Maven

3. Updated README throughout:
   - Project structure shows HelloGPUs4J.java
   - All code examples updated with new class name
   - Three clear options: Maven, No Maven, or Local config
   - Updated output to show "Hello GPU! Welcome to TornadoVM"

4. Updated pom.xml to compile HelloGPUs4J.java

Result: Even more accessible - you don't even need Maven to try GPU programming!